Retroalimentación del proyecto final para el Módulo 1

--- a/historia.html
+++ b/historia.html
@@ -14,13 +14,13 @@
         <li><a href="contacto.html">Contacto</a></li>
     </ul>
 </div>
-
+<!-- Esta etiqueta body debe agrupar a todo lo visible que hay en nuestra página, debería estar arriba, despues del cierre de </head> -->
 <body>
 
 <header>
     <h1>Historia de Donald Trump</h1>
 </header>
-
+<!-- Hay que agrupar los section con un main-->
 <section>
     <h2>Infancia y Educación</h2>
     <p>Donald John Trump nació el 14 de junio de 1946 en Queens, Nueva York. Fue el cuarto de cinco hijos de Frederick C. Trump, un exitoso desarrollador inmobiliario, y Mary Anne MacLeod, una inmigrante escocesa. Desde temprana edad, Trump mostró un interés por los negocios.</p>
