--- a/index.html
+++ b/index.html
@@ -6,19 +6,22 @@
     <title>Donald Trump</title>
 </head>
 <body>
-
+<!-- Muy bien por hacer uso de las etiquetas semánticas, solo como corrección, el header suele agrupar tanto el título de la página como el menú de navegación -->
 <header>
     <h1>Donald Trump</h1>
 </header>
 
 <div class="enlaces">
     <h2>Enlaces interesantes:</h2>
+<!-- Como esta lista contiene el menú de navegación, debería ir entre las etiquetas <nav> y </nav> -->
     <ul>
         <li><a href="index.html">Inicio</a></li>
         <li><a href="historia.html">Historia</a></li>
         <li><a href="contacto.html">Contacto</a></li>
     </ul>
 </div>
+
+<!-- Aquí también usaste bien section, pero estás dos secciones deberían ir agrupadas con las etiquetas <main y </main> pues es el contenido principal -->
 
 <section>
     <h2>Biografía</h2>
